--- a/TransflowerStoreWeb/public/about.html
+++ b/TransflowerStoreWeb/public/about.html
@@ -4,7 +4,7 @@
     <title>Transflower Web</title>
 </head>
 <body>
-    <h1>Online Flower Shop</h1>
+    <h1>About Us</h1>
     <a href="/">Home</a> | <a href="/about.html">About</a> | <a href="/contact.html">Contact</a>
     <hr/>
 </body>
